static page content updates

--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -6,59 +6,53 @@
   </div>
 </div>
 <div class="container">
-  <h2 class="text-centre">
-    Aged 12-25 and volunteer?
+  <h2>
+    What are the Saltire Awards?
   </h2>
-  <p class="text-centre b-margin-full">
-    <strong>{{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating,<br />
-    recognising and rewarding the commitment, contribution and <br />
-    achievements of young volunteers in Scotland.</strong>
+  <p class="b-margin-full">
+    <strong>{{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland, aged between 12 and 25.<br />
+    Young people gain nationally recognised certificates, signed by Scottish Government Ministers, for the different amounts of volunteering they do.</strong>
   </p>
-  <h3 class="text-centre no-margin">
-    Get certificates
+  <h3 class="no-margin">
+    What is volunteering?
   </h3>
-  <p class="text-centre b-margin-full b-padding">
-    <strong>Signed by Scottish Government Ministers</strong>
+  <p class="b-margin-full">
+    The Saltire Awards recognise volunteering that meets the following three clear characteristics:
   </p>
-  <div class="columns certificates">
-    <div class="column col-sm-6 col-3 certificate text-centre">
-      {{> badge api_name="Challenge"}}
-      <h4 class="t-margin-full">
-        The Challenge
-      </h4>
-      <p>
-        For those getting started in volunteering through team challenges
-      </p>
-    </div>
-    <div class="column col-sm-6 col-3 certificate text-centre">
-      {{> badge api_name="10"}}
-      <h4 class="t-margin-full">
-        The Approach
-      </h4>
-      <p>
-        For when you've reached 10 and 25 hours volunteering
-      </p>
-    </div>
-    <div class="column col-sm-6 col-3 certificate text-centre">
-      {{> badge api_name="50"}}
-      <h4 class="t-margin-full">
-        The Ascent
-      </h4>
-      <p>
-        For when you've reached 50, 100, 200 or even 500 hours
-      </p>
-    </div>
-    <div class="column col-sm-6 col-3 certificate text-centre">
-      {{> badge api_name="Summit"}}
-      <h4 class="t-margin-full">
-        The Summit
-      </h4>
-      <p>
-        For those that have made an outstanding contribution to volunteering
-      </p>
-    </div>
-  </div>
-  <h3 class="text-centre t-margin">
+  <ul class="b-margin-full">
+    <li>It is a free will activity.  This means you are doing it because you want to, and no one is forcing you to do it.</li>
+    <li>It is not done for financial gain. Volunteering is not a job and you cannot be paid; however, you may have any reasonable expenses covered.</li>
+    <li>It is for the benefit of the community, society at large or an individual</li>
+  </ul>
+
+  <h3 class="no-margin">
+    Why you might want to volunteer?
+  </h3>
+  <ul class="b-margin-full">
+    <li>Gain new skills and experience that will look great on your CV and could help you at school and/or       work</li>
+    <li>Meet new people and make new friends and connections</li>
+    <li>Make a difference to individual people, communities and the environment</li>
+    <li>Have fun! You will have the chance to get involved in variety of activities that might not have done before</li>
+  </ul>
+
+  <h3 class="no-margin">
+    How to get involved
+  </h3>
+  <p>
+    <a href="/search">Search for volunteer opportunities</a><br />
+    <a href="/info-for-volunteers">Find out more</a><br />
+    <a href="info-for-groups">Support young people in your group / organisation</a>
+  </p>
+
+  <h3 class="no-margin">
+    Ready to get started?
+  </h3>
+  <p>
+    Volunteer? <a href="/sign-up">sign up</a> or <a href="/sign-in">sign in</a><br />
+    Supporting a group? <a href="/info-for-groups">sign up</a> or <a href="/sign-in-admin">sign in</a>
+  </p>
+
+  {{!-- <h3 class="text-centre t-margin">
     Volunteer?
   </h3>
   <div class="my-saltire columns b-margin-full">
@@ -87,5 +81,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> --}}
 </div>
