--- a/configuration/templates/pages/contact.hbs
+++ b/configuration/templates/pages/contact.hbs
@@ -65,10 +65,10 @@
     {{/each ~}}
   </div>
   {{/unless ~}}
-  <h2 class="t-margin">
+  {{!-- <h2 class="t-margin">
     National enquiries
   </h2>
   <p>
     If you represent a national organisation or encounter an error or bug with the website, please contact <a href="mailto:{{@root.context.metaData.contacts.admin}}">{{@root.context.metaData.contacts.admin}}</a>.
-  </p>
+  </p> --}}
 </div>
