stripping triple tags for potentially dangerous object fields

--- a/configuration/templates/account/email/approval.hbs
+++ b/configuration/templates/account/email/approval.hbs
@@ -8,7 +8,7 @@
     {{!-- "to": "alex.nuttgens@scvo.org.uk", --}}
     "to": "{{>support_name}} <{{>support_email_address}}>",
     {{else}}
-    "to": "{{{approval_email}}}",
+    "to": "{{approval_email}}",
     {{/compare ~}}
     "o:tag": "{{{type}}}",
     "o:tracking": true,
