--- a/configuration/templates/account/sidebar.hbs
+++ b/configuration/templates/account/sidebar.hbs
@@ -21,7 +21,7 @@
       {{#if icon ~}}
       <span class="far fa-fw fa-{{icon}}" aria-hidden="true"></span>
       {{/if ~}}
-      {{{label}}}
+      {{label}}
     </a>
     {{!-- {{#if public_checkbox ~}}
     <div class="menu-badge">
