--- a/configuration/templates/volunteering/query-hours.hbs
+++ b/configuration/templates/volunteering/query-hours.hbs
@@ -39,14 +39,14 @@
           </div>
           <div class="columns b-margin">
             <div class="column col-2 text-left">
-              {{{organisation_name}}}
+              {{organisation_name}}
             </div>
             <div class="column col-2 text-left">
               {{volunter_manager_first_name}} {{volunteer_manager_last_name}} ({{volunteer_manager_title}})
             </div>
             {{#if task_description ~}}
               <div class="column col-xs-auto text-left">
-                {{{task_description}}}
+                {{task_description}}
               </div>
             {{/if ~}}
           </div>
