--- a/configuration/partials/verify-testimonials.hbs
+++ b/configuration/partials/verify-testimonials.hbs
@@ -17,12 +17,12 @@
       <div class="column col-6 col-lg-8 col-md-9 col-sm-12 col-mx-auto">
         <div class="b-margin">
           Write about what {{@root.data.accountInfo.first_name}} has achieved with
-          {{{organisation_name}}}
+          {{organisation_name}}
           <br />
           <span class="caption">Note: This may be shown on their certificate</span>
         </div>
           <div class="form-group">
-          <textarea rows="3" placeholder="" cols="40" width="100%" id="testimonial" name="testimonial" class="inline-form-input inline-edit" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.testimonial}}>{{{testimonial}}}</textarea>
+          <textarea rows="3" placeholder="" cols="40" width="100%" id="testimonial" name="testimonial" class="inline-form-input inline-edit" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.testimonial}}>{{testimonial}}</textarea>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-success inline-update-button b-margin">Add testimonial</button>
