--- a/configuration/templates/account/email/welcome.hbs
+++ b/configuration/templates/account/email/welcome.hbs
@@ -5,7 +5,7 @@
     "from": "{{@root.context.metaData.title}} <{{@root.context.metaData.contacts.noreply}}>",
     "h:sender": "{{@root.context.metaData.title}} <{{@root.context.metaData.contacts.noreply}}>",
     "h:Reply-To": "{{>support_name}} <{{>support_email_address}}>",
-    "to": "{{{@root.data.accountInfo.email}}}",
+    "to": "{{@root.data.accountInfo.email}}",
     "o:tag": "welcome",
     "o:tracking": true,
     {{!-- "o:testmode": true, --}}
