--- a/configuration/templates/volunteering/email/verify-hours.hbs
+++ b/configuration/templates/volunteering/email/verify-hours.hbs
@@ -4,7 +4,7 @@
   "from": "{{@root.context.metaData.title}} <{{@root.context.metaData.contacts.noreply}}>",
   "h:sender": "{{@root.context.metaData.title}} <{{@root.context.metaData.contacts.noreply}}>",
   "h:Reply-To": "{{>support_name}} <{{>support_email_address}}>",
-  "to": "{{{this}}}",
+  "to": "{{this}}",
   "o:tag": "{{{@root.route.metaData.emailType}}}",
   "o:tracking": true,
   "v:tasks": "{{>account_list_tasks email=this}}",
