--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -10,8 +10,10 @@
     What are the Saltire Awards?
   </h2>
   <p class="b-margin-full">
-    <strong>{{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland, aged between 12 and 25.<br />
-    Young people gain nationally recognised certificates, signed by Scottish Government Ministers, for the different amounts of volunteering they do.</strong>
+    {{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland, aged between 12 and 25.
+  </p>
+  <p class="b-margin-full">
+    Young people gain nationally recognised certificates, signed by Scottish Government Ministers, for the different amounts of volunteering they do.
   </p>
   <h3 class="no-margin">
     What is volunteering?
