some config, plus descriptions gone from awards

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -36,7 +36,7 @@
   <meta name="msapplication-TileImage" content="{{~>asset_url url='images/icons/ms-icon-144x144.png'~}}">
   <meta name="theme-color" content="{{@root.context.metaData.theme.secondary}}">
   <link rel="search" type="application/opensearchdescription+xml" title="{{@root.context.metaData.title}}" href="{{~>asset_url url='opensearch.xml'~}}" />
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.8.3/polyfill.min.js"></script>
   <script>
   window.dataLayer = window.dataLayer || [];
 
