--- a/configuration/templates/volunteering/certificate/object-body-admin.hbs
+++ b/configuration/templates/volunteering/certificate/object-body-admin.hbs
@@ -17,13 +17,13 @@
           {{/json ~}},
           {{{json key='award_level' value=award_level}}},
           {{{json key='organisation_name_1' value=organisation_name_1}}},
-          {{{json key='description_1' value=description_1}}},
+          {{{json key='role_1' value=role_1}}},
           {{{json key='testimonial_1' value=testimonial_1}}},
           {{{json key='organisation_name_2' value=organisation_name_2}}},
-          {{{json key='description_2' value=description_2}}},
+          {{{json key='role_2' value=role_2}}},
           {{{json key='testimonial_2' value=testimonial_2}}},
           {{{json key='organisation_name_3' value=organisation_name_3}}},
-          {{{json key='description_3' value=description_3}}},
+          {{{json key='role_3' value=role_3}}},
           {{{json key='testimonial_3' value=testimonial_3}}},
           {{{json key='sdgs' value=un_sustainable_development_goals}}},
           {{{json key='claim_code' value=claim_code}}},
@@ -50,13 +50,13 @@
           {{/json ~}},
           {{{json key='award_level' value=award_level}}},
           {{{json key='organisation_name_1' value=organisation_name_1}}},
-          {{{json key='description_1' value=description_1}}},
+          {{{json key='role_1' value=role_1}}},
           {{{json key='testimonial_1' value=testimonial_1}}},
           {{{json key='organisation_name_2' value=organisation_name_2}}},
-          {{{json key='description_2' value=description_2}}},
+          {{{json key='role_2' value=role_2}}},
           {{{json key='testimonial_2' value=testimonial_2}}},
           {{{json key='organisation_name_3' value=organisation_name_3}}},
-          {{{json key='description_3' value=description_3}}},
+          {{{json key='role_3' value=role_3}}},
           {{{json key='testimonial_3' value=testimonial_3}}},
           {{{json key='sdgs' value=un_sustainable_development_goals}}},
           {{{json key='claim_code' value=claim_code}}},
