--- a/configuration/templates/admin/group-award-edit-body.hbs
+++ b/configuration/templates/admin/group-award-edit-body.hbs
@@ -15,7 +15,7 @@
       "printed_certificate_issued" : false,
       {{{json key='claim_code' value=claim_code}}},
       {{{json key='un_sustainable_development_goals' value=un_sustainable_development_goals}}},
-      {{{json key='description_1' value=description_1}}},
+      {{{json key='role_1' value=role_1}}},
       {{{json key='organisation_name_1' value=organisation_name_1}}},
       {{{json key='testimonial_1' value=testimonial_1}}}
     {{/json}}
