--- a/configuration/templates/volunteering/task-body-submit.hbs
+++ b/configuration/templates/volunteering/task-body-submit.hbs
@@ -7,6 +7,7 @@
       {{{json key='organisation_charity_number' value=organisation_charity_number }}},
       {{{json key='un_sustainable_development_goals' value=(default (join un_sustainable_development_goals ';') un_sustainable_development_goals)}}},
       {{{json key='task_description' value=task_description}}},
+      {{{json key='task_role' value=task_role}}},
       {{{json key='volunteer_manager_email' value=volunteer_manager_email }}},
       {{{json key='volunteer_manager_first_name' value=volunteer_manager_first_name}}},
       {{{json key='volunteer_manager_last_name' value=volunteer_manager_last_name }}},
